[package]
name = "black-box-planning-solver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "black-box-planning-solver"
path = "src/main.rs"

[[bin]]
name = "input_generator"
path = "src/problem/taxi_problem/random_input_generator.rs"

[dependencies]
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }

[profile.dev]
opt-level = 2
